# acoustic-mcp

./: .gitignore  .mcp.json  ASSEMBLY.md  CLAUDE.md  FEDORA_QUICKSTART.md  METADIFFUSER_README.md  NO_GUI_OPTIONS.md  QUICKSTART.md  README.md  THEORY.md  acoustic_mcp_plan.md  build.sh  metadiffuser_tile.scad
acoustic-mcp/: .mcpbignore  manifest.json  pyproject.toml
acoustic-mcp/acoustic/: __init__.py  diffuse.py  optimizer.py  server.py  tmm.py  utils.py
acoustic-mcp/acoustic/models/: __init__.py  air.py  helmholtz.py  membrane.py  perforated.py  porous.py
acoustic-mcp/tests/: test_helmholtz.py  test_porous.py  test_tmm.py  test_validation.py
