[project]
name = "acoustic-mcp"
version = "0.1.0"
description = "Acoustic absorber design MCP server — calculates absorption coefficients for porous, perforated, membrane, and Helmholtz absorbers using the Transfer Matrix Method."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio"]
charts = ["plotly>=5.0", "kaleido"]

[project.scripts]
acoustic-mcp = "acoustic.server:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
